p2/confs/apps/overlays/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${name}
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: ${hostname}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ${name}
            port:
              number: ${port}
